Code refactorings. Update dependencies